# rubin_sim

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_dev.md  all_req.txt  container_environment.yaml  example_deployment.yaml  optional-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  showmaf-deploy.yaml  test-requirements.txt
.github/workflows/: build_container.yaml  build_docs.yaml  build_pypi.yml  cache.yaml  python-all-tests.yml  python-docs-only.yml  python-tests-doc.yml  python-tests.yml  rebase_checker.yaml  ruff.yaml  run_all_tests.yaml  run_tests_docs.yaml  test_and_build.yaml
batch/: compile_prenight_metadata_cache.sh  prenight-conda-spec-file.txt  run_auxtel_prenight_sims.sh  run_auxtel_prenight_sims_vsatest.sh  run_prenight_sims.sh  run_prenight_sims_vsatest.sh
ci/: Jenkinsfile_rubin_sim.conda
doc/: .gitignore  Makefile  README.md  conf.py  index.rst  maf.rst  metricList.py  metricList.rst  metric_list.py  overview.rst  scheduler.rst  toc.rst
doc/rs_data/: index.rst
doc/rs_maf/: index.rst
doc/rs_movingObjects/: index.rst
doc/rs_moving_objects/: index.rst
doc/rs_photUtils/: index.rst
doc/rs_phot_utils/: index.rst
doc/rs_satellite_constellations/: index.rst
doc/rs_scheduler/: index.rst  output_schema.rst
doc/rs_selfcal/: index.rst
doc/rs_site_models/: index.rst
doc/rs_skybrightness/: index.rst
doc/rs_skybrightness_pre/: index.rst
doc/rs_utils/: index.rst
doc/rubin_sim/: index.rst
docs/: .gitignore  Makefile  api.rst  archive.rst  conf.py  data-api.rst  data-download.rst  developer.rst  documenteer.toml  index.rst  installation.rst  introduction.rst  maf-api-batches.rst  maf-api-db.rst  maf-api-maf-contrib.rst  maf-api-maps.rst  maf-api-metricbundles.rst  maf-api-metrics.rst  maf-api-plots.rst  maf-api-run-comparison.rst  maf-api-slicers.rst  maf-api-stackers.rst  maf-api-utils.rst  maf-api.rst  maf.rst  metric_list.py  moving-objects-api.rst  moving-objects.rst  phot-utils-api.rst  phot-utils.rst  prenight.rst  protoarchive.rst  satellite-constellations-api.rst  satellite-constellations.rst  selfcal-api.rst  selfcal.rst  sim-archive-api.rst  skybrightness-api.rst  skybrightness.rst  user-guide.rst  (+5 more)
rubin_sim/: __init__.py  visitsarch.py
rubin_sim/data/: __init__.py  data_sets.py  rs_download_data.py  rs_download_sky.py
rubin_sim/maf/: __init__.py  ddf_dir.py  generate_ss.py  glance_dir.py  maf_night_report.py  make_fbs_tracking_db.py  metadata_dir.py  run_moving_calc.py  run_moving_fractions.py  run_moving_join.py  run_selfcal_metric.py  scimaf_dir.py  show_maf.py
rubin_sim/maf_proto/: __init__.py
rubin_sim/movingObjects/: __init__.py  add_seds.py  baseObs.py  chebyFits.py  chebyValues.py  chebyshevUtils.py  directObs.py  generate_coefficients.py  linearObs.py  lsstCameraFootprint.py  ooephemerides.py  orbits.py  utils.py
rubin_sim/moving_objects/: __init__.py  base_obs.py  cheby_fits.py  cheby_values.py  chebyshev_utils.py  direct_obs.py  linear_obs.py  make_lsst_obs.py  ooephemerides.py  orbits.py  pre_generate.py  utils.py
rubin_sim/photUtils/: Bandpass.py  BandpassDict.py  BandpassSet.py  CosmologyObject.py  LSSTdefaults.py  PhotometricParameters.py  PhysicalParameters.py  Sed.py  SedList.py  SedUtils.py  SignalToNoise.py  __init__.py  basic__init__.py
rubin_sim/phot_utils/: __init__.py  bandpass.py  bandpass_dict.py  bandpass_set.py  basic__init__.py  cosmology_object.py  lsst_defaults.py  photometric_parameters.py  physical_parameters.py  predicted_zeropoints.py  sed.py  sed_list.py  sed_utils.py  signaltonoise.py  spectral_resampling.py
rubin_sim/satellite_constellations/: __init__.py  basis_function.py  model_observatory.py  sat_utils.py
rubin_sim/scheduler/: __init__.py  sim_runner.py
rubin_sim/selfcal/: __init__.py  generate_catalog.py  offsets.py  solver.py  star_tools.py
rubin_sim/sim_archive/: __init__.py  conda_packages.py  future_vsarch.py  make_snapshot.py  prenight.py  prenightindex.py  prototype.py  sim_archive.py  tempdb.py  util.py  vseqarchive.py  vseqmetadata.py
rubin_sim/site_models/: __init__.py  almanac.py  cloudData.py  cloudModel.py  cloud_data.py  cloud_model.py  downtimeModel.py  downtime_model.py  field.py  field_selection.py  fields_database.py  generate_planets.py  generate_sun_moon_pos.py  generate_sunsets.py  read_fields.py  scheduledDowntimeData.py  scheduled_downtime_data.py  seeingData.py  seeingModel.py  seeing_data.py  seeing_model.py  unscheduledDowntimeData.py  unscheduled_downtime_data.py  wind_data.py
rubin_sim/skybrightness/: __init__.py  allSkyDB.py  allsky_db.py  generate_hdf5.py  interpComponents.py  interp_components.py  skyModel.py  sky_model.py  twilightFunc.py  twilight_func.py  utils.py
rubin_sim/skybrightness_pre/: SkyModelPre.py  __init__.py  dark_sky.py  m5percentiles.py  sky_model_pre.py
rubin_sim/splat/: __init__.py  disp_splat.py
rubin_sim/utils/: AstrometryUtils.py  CodeUtilities.py  CompoundCoordinateTransformations.py  CoordinateTransformations.py  FocalPlaneUtils.py  ModifiedJulianDate.py  ObservationMetaData.py  Site.py  SpatialBounds.py  WcsUtils.py  ZernikeModule.py  __init__.py  approxCoordTransforms.py  approx_coord_transforms.py  astrometry_utils.py  bearing.py  binnedStats.py  binned_stats.py  cameraFootprint.py  camera_footprint.py  code_utilities.py  compound_coordinate_transformations.py  coordinate_transformations.py  ddf_locations.py  fileMaps.py  file_maps.py  focal_plane_utils.py  generate_example_db.py  getPackageDir.py  get_package_dir.py  healpyUtils.py  healpy_utils.py  htmModule.py  htm_module.py  m5_flat_sed.py  mjd_zero.py  modified_julian_date.py  observation_meta_data.py  projections.py  riseset.py  (+15 more)
sql/: make_visitsarch.sql  make_vseqmeta.sql
tests/: test_visitsarch.py
tests/data/: test_data.py  test_ddf_grid.py
tests/maf/: test_3x2fom.py  test_BaseMetrics.py  test_BatchCommon.py  test_CadenceMetrics.py  test_CalibrationMetrics.py  test_DB.py  test_DBObject.py  test_HealpixSlicer.py  test_HealpixSubsetSlicer.py  test_HourglassMetric.py  test_JSON.py  test_Maps.py  (+66 more)
(+860 files in other folders)
