[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
  doc/**,
  bin/**,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[tool:pytest]
addopts = --black
norecursedirs = data_dir/*
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503

[metadata]
name = rubin_sim
description = Scheduler, survey strategy analysis, and other simulation tools for Rubin Observatory.
url = https://github.com/lsst/rubin_sim
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy
version = attr: setuptools_scm.get_version

